# pdx-explorer

./: Cargo.toml  LICENSE
src/: core.rs  database.rs  dir_tree.rs  error.rs  explorer.rs  lib.rs  main.rs
src/database/: dir.rs  localization.rs  models.rs  parser.rs  schema.rs
src/database/sql/: init.sql
src/sql/: init.sql
test_input/game/localization/: 0_should_overwrite_l_english.yml  1_should_get_overwritten_l_english.yml  loc_l_english.yml
