[package]
name = "pdx-explorer"
version = "0.1.0"
license = "MIT"
edition = "2024"

[dependencies]
eframe = { version = "0.32.3", features = ["persistence"] }
egui_extras = "0.32.3"
rfd = "0.15.4"
serde = { version = "1.0.228", features = ["derive"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }