[package]
name = "pdx-explorer"
version = "0.1.0"
license = "MIT"
edition = "2024"

[dependencies]
eframe = { version = "0.32.3", features = ["persistence"] }
egui_extras = "0.32.3"
rfd = "0.15.4"
serde = { version = "1.0.228", features = ["derive"] }
libsqlite3-sys = { version = "0.35.0", features = ["bundled"] }
diesel = { version = "2.3.2", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }